# battleship

./: .gitignore  CMakeLists.txt  README.md  README_RU.md
lib/: Game.h
tests/: CMakeLists.txt  game_tests.cpp
